GNOME Bugzilla – Bug 563760
Color Management is Missing
Last modified: 2012-01-29 18:36:56 UTC
It would be great if eog could at least be aware of color profiles associated with images it opens. If you go to http://www.color.org/version4html.xalter and save and open the four parts of the image of the mountain, you can test and see that eog has no support for ICC profiles, v2 or v4.
I tried this and for me it works with both v2 and v4. I am using 2.24.1 in Ubuntu.
I just tried this with eog 2.26.2-1 in Debian. I get the same results as the original reporter. lcms is 1.18.dfsg-1.
Using Evince 2.27.1, poppler 0.11.0, and lcms 1.18.dfsg-0ubuntu1, all images show up correctly. :)
o.O Somehow misread this, nevermind, sorry. EoG still doesn't show up correctly, 2.27.2. Bumping up version number.
Do you have an ICC profile associated with your display (e.g. using xicc)? eog doesn't automatically assume SRGB profiles yet.
Hmmm, that seems to have been my problem indeed, with an icc profile installed everything works. Would it be possible to have eog display a warning in case the image includes icc-data but no profile is installed on the system? Now off to check if there's an open bug against evince regarding this; it doesn't seem to support icc profiles, even after I have installed an icc profile... Anyway, thanks for the tip!
(In reply to comment #6) > Hmmm, that seems to have been my problem indeed, with an icc profile installed > everything works. Would it be possible to have eog display a warning in case > the image includes icc-data but no profile is installed on the system? > Well, an error message probably isn't the best idea here, as most casual users have no interest in color correction (although, they maybe should) nor do they have calibrated screens. They would be "irritated" by the recurring error message. I'm not sure right now but I think the general way is assuming an sRGB display in that case. But if you are interested: Run eog with the EOG_DEBUG_LCMS=1 envvar set and it will print debug messages, like if your display has a profile set or not.
For images that doesn't contain icc data, it's pointless output any error message just because there's no profile installed, of course. But if the picture contains such data, it might be that the image would look totally distorted without at least a default profile installed (a good example is the icc v4 test page). Maybe a notification in the status bar below the image, or possibly in the image properties? Something like "Note: image contains ICC data, but no ICC profile installed on system"...
*** Bug 629158 has been marked as a duplicate of this bug. ***
Alright, I modified eog to assume an sRGB display by default. This would be a noop for most images and is what Gimp and Firefox do. See bug 554498 for the where a sane default for images is searched for. A dialog/sidebar showing information about the used ICC profiles seems to be a nice candidate for plugin. If anyone's interested, please open a new enhancement request. commit b2b3aa269cba01e129d92905cde6268aa9e23eb3 Author: Felix Riemann <> Date: Wed Jan 25 20:54:52 2012 +0100 Assume sRGB if no display profile is set Gimp and Firefox make this assumption as well. https://bugzilla.gnome.org/show_bug.cgi?id=563760 --- This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.