Assume sRGB if no display profile is set

Gimp and Firefox make this assumption as well.

https://bugzilla.gnome.org/show_bug.cgi?id=563760