src/eom-window.c
@@ -388,7 +388,7 @@ eom_window_get_display_profile (GdkScreen *screen)
 	gulong length;
 	guchar *str;
 	int result;
-	cmsHPROFILE *profile;
+	cmsHPROFILE *profile = NULL;
 	char *atom_name;
 
 	dpy = GDK_DISPLAY_XDISPLAY (gdk_screen_get_display (screen));
@@ -440,14 +440,17 @@ eom_window_get_display_profile (GdkScreen *screen)
 
 		if (G_UNLIKELY (profile == NULL)) {
 			eom_debug_message (DEBUG_LCMS,
-					   "Invalid display profile, "
-					   "not correcting");
+					   "Invalid display profile set, "
+					   "not using it");
 		}
 
 		XFree (str);
-	} else {
-		profile = NULL;
-		eom_debug_message (DEBUG_LCMS, "No profile, not correcting");
+	}
+
+	if (profile == NULL) {
+		profile = cmsCreate_sRGBProfile ();
+		eom_debug_message (DEBUG_LCMS,
+				 "No valid display profile set, assuming sRGB");
 	}
 
 	return profile;
